AUT-15 added swagger documentation for update role status
