# docs/swagger.json
@@ -778,6 +778,97 @@
                 }
             }
         },
+        "/roles/{id}/status": {
+            "patch": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "roles"
+                ],
+                "summary": "changes role status",
+                "parameters": [
+                    {
+                        "description": "status",
+                        "name": "status",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UpdateRoleStatus"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "role id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "user id",
+                        "name": "x-subject",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "action",
+                        "name": "x-action",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "tenant",
+                        "name": "x-tenant",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "resource",
+                        "name": "x-resource",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successfully updates the role's status",
+                        "schema": {
+                            "type": "boolean"
+                        }
+                    },
+                    "400": {
+                        "description": "required field error",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "access denied",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/roles/{roleid}/users/{userid}": {
             "post": {
                 "security": [
@@ -1742,6 +1833,15 @@
                 }
             }
         },
+        "dto.UpdateRoleStatus": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "description": "Status is new status of the role that is going to replace the old one",
+                    "type": "string"
+                }
+            }
+        },
         "dto.UpdateServiceStatus": {
             "type": "object",
             "properties": {
@@ -1763,7 +1863,7 @@
                     "type": "string"
                 },
                 "status": {
-                    "description": "Status is new status that will replace old status of the service",
+                    "description": "Status is new status that will replace old status of the user",
                     "type": "string"
                 },
                 "user": {
